# parsearg

./: CMakeLists.txt  parsearg.cpp  parsearg.hpp
.github/workflows/: ci.yml
test/: CMakeLists.txt  test.cpp
